[package]
name = "rust-pass"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
menu_rs = "0.3"
rpassword = "7.2"
dialoguer = "0.11"
secrecy = { version = "0.8", features = ["serde"]}
console = "0.15"
